feat: patch endpoint + updated yaml file to reflect changes for entire ticket
