# backend/internal/models/session_student.go
@@ -41,6 +41,8 @@ type CreateSessionStudentInput struct {
 }
 
 type PatchSessionStudentInput struct {
+	SessionID string `json:"session_id" validate:"required,uuid"`
+	StudentID string `json:"student_id" validate:"required,uuid"`
 	Present *bool   `json:"present,omitempty"`
 	Notes   *string `json:"notes,omitempty"`
 }
