# backend/internal/service/server.go
@@ -135,9 +135,10 @@ func SetupApp(config config.Config, repo *storage.Repository) *fiber.App {
 	})
 
 	SessionStudentHandler := sessionstudent.NewHandler(repo.SessionStudent)
-	apiV1.Route("/session_students", func(r fiber.Router) {
+	apiV1.Route("/session-students", func(r fiber.Router) {
 		r.Post("/", SessionStudentHandler.CreateSessionStudent)
 		r.Delete("/", SessionStudentHandler.DeleteSessionStudent)
+		r.Patch("/", SessionStudentHandler.PatchSessionStudent)
 	})
 
 	// Handle 404 - Route not found
